<resources>
    <string name="app_name">Price Monitoring App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_latest_price">Latest Price</string>
    <string name="menu_search_store">Search Store</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="food_categories_array">
        <item>Category A</item>
        <item>Category B</item>
        <item>Category C</item>
        <item>Category D</item>
    </string-array>

    <string-array name="areas_array">
        <item>Dhanmodi</item>
        <item>Mirpur</item>
        <item>Mohammadpur</item>
        <item>Gabtoli</item>
    </string-array>
</resources>
