<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_latest_price">

    <fragment
        android:id="@+id/nav_latest_price"
        android:name="com.example.pricemonitoringapp.ui.latestPrice.LatestPriceFragment"
        android:label="@string/menu_latest_price"
        tools:layout="@layout/fragment_latest_price" />

    <fragment
        android:id="@+id/nav_search_store"
        android:name="com.example.pricemonitoringapp.ui.searchStore.SearchStoreFragment"
        android:label="@string/menu_search_store"
        tools:layout="@layout/fragment_search_store" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pricemonitoringapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.pricemonitoringapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.pricemonitoringapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.pricemonitoringapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>